[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["t.wieprich <tgwieprich@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_project"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
